k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-petclinic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: app
  labels:
    app: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        - name: spring-petclinic
          image: spring-petclinic:1.0
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
